--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,6 @@ jobs:
 
     - name: npm install, build and test
       run: |
-        npm ci
+        npm install
         npm run build --if-present
         npm test
